- Reworked board setup dialog (thanks to Steven Atkinson)
- Correspondence chess :
  * Parse "TimeControl" and show in tooltip if it is sent by the server
- Sound:
  * Add "alert" sound from the CE to the PC version as well. Use
    ::utils::sound::PlaySound "sound_alert"
  * wav-file added to the package
- Correspondence Chess
  * Adopt button alignement
- Tools Menu
  * Remove Novag entry
  * Add "Connect Hardware" 
  * Add "Connect Hardware / Configure" usable for Novag & Input Engine
  * Add "Connect Hardware / Input Engine"
  * Add "Connect Hardware / Novag Citrine"
  * Make hardware connect buttons visibility configurable 
    (remove it needs restart)
- Novag Citrine
  * Remove own config (replaced by unified dialogue)
  * Use unified "Connect Hardware" dialoge and parameters thereof
  * Use "hardware connect" button
  * Set button images according to current state
- Input Engine Support:
  * Rework of GUI
  * Handle "illegal moves" (warn user, ignore them)
  * Add "rotate board"
  * Add Synchronise button
  * Add Miniboard to the console
  * Add NLS
  * Add Support for DGT XL external clock
  * Colour various states in move area
  * To use a DGT Electronic Chess Board  dgtdrv V1.21 or higher is
    required. (http://dgtdrv.sf.net)
- Docs
  * Update Novag part (as far as possible)
  * Add "Connect Hardware" with subtopics to english help
  * Add "Input Engine" including some remarks about DGT
- NLS
  * Add tags for all hardware connection dialogues
  * German translation for the tags added
- Database information
  * Add the ability to write Dublin Core metadata for a Scid database
  by means of Tools / Database information. This includes reading
  metadata from a sme file.
- FICS console : autoscrolling is turned off if the view is not located at the end of the text
- Mask (Tree window) : 
	* added menu entry to remove NAG value for a move
	* added entry in popup menu to enter moves not present in Tree